<resources>
    <string name="hb_app_name">GoGoBuy</string>
    <string name="drawer_open" translatable="false">Left</string>
    <string name="drawer_close" translatable="false">Home</string>
    <string name="action_settings">Settings</string>
    <string name="activity_recharge">Top up</string>
    <string name="activity_goods_detail">Details</string>
    <string name="activity_goods_category">Categories</string>
    <string name="activity_goods_confirm">Confirm</string>
    <string name="activity_pay">Payment</string>
    <string name="activity_profile">Profile</string>
    <string name="activity_setting">Settings</string>
    <string name="activity_pass_mgr">Password</string>
    <string name="activity_agreement">Terms of Service</string>
    <string name="activity_about">About</string>
    <string name="activity_show">Winner’s Timeline</string>
    <string name="activity_show_detail">Show details</string>
    <string name="activity_share_prize">Winner’s Moment</string>
    <string name="activity_address_select">Select</string>
    <string name="activity_address_center">Delivery address</string>
    <string name="activity_address_edit">Edit address</string>
    <string name="activity_recharge_instruction">How to top up</string>
    <string name="choice_recharge_amount">Select amount</string>
    <string name="choice_pay_channel">Choose payment method</string>
    <string name="choice_part_person_time">Choose number of times</string>
    <string name="your_particate">Your purchase: </string>
    <string name="recharge_now">Top up</string>
    <string name="pay_now">Bet Now</string>
    <string name="pay_amount">Total</string>
    <string name="times_total">Total </string>
    <string name="times_retain">Remain</string>
    <string name="account_balance">Account balance</string>
    <string name="part_now">Bet Now</string>
    <string name="part">Bet Now</string>
    <string name="part_add">Additional</string>
    <string name="paypal">Paypal</string>
    <string name="google_pay">Google Pay</string>
    <string name="pass_mgr">Password</string>
    <string name="app_version_check">Check for updates</string>
    <string name="agreement">Terms of Service</string>
    <string name="about">About</string>
    <string name="user_exit">Logout</string>
    <string name="lucky_number">Lucky number: </string>
    <string name="part_try_hint">Join us to win this?</string>
    <string name="particate_number">Your ticket number: </string>
    <string name="label_congratulate">Congratulations, </string>
    <string name="label_obtain">Wins </string>
    <string name="product_not_found">No results</string>
    <string name="net_request_error">Failed to connect to network</string>
    <string name="net_request_retry">Tap to retry</string>
    <string name="image_text_detail">Show details</string>
    <string name="timeline_share">Winner’s Moment</string>
    <string name="history_look">Previews</string>
    <string name="calc_detail">How to calculate Lucky Number?</string>
    <string name="award_date">Due date: </string>
    <string name="award_count_down">Countdown: </string>
    <string name="label_period_">Round: %s</string>
    <string name="period_part">Current term participation: </string>
    <string name="all_part_recorder">All purchase</string>
    <string name="part_detail">View details</string>
    <string name="product_state_doing">Open</string>
    <string name="product_state_done">Closed</string>
    <string name="product_state_share">Shared</string>
    <string name="label_recharge">Top up</string>
    <string name="label_winner">Winner</string>
    <string name="label_show">Show</string>
    <string name="label_support">Support</string>
    <string name="last_award">Winner</string>
    <string name="help_center">Help Center</string>
    <string name="main_tab_all">All GOODS</string>
    <string name="main_tab_tens">10THB REGION</string>
    <string name="click_retry">Click to retry</string>
    <string name="loadmore_empty">No more products</string>
    <string name="times">times</string>
    <string name="win_prize">Congratulations, you win!</string>
    <string name="lable_period_name">Round: %s</string>
    <string name="lable_winner">Winner: %s</string>
    <string name="lable_period_times">Current term participation: %s times</string>
    <string name="lable_win_number">Lucky number: %s</string>
    <string name="list_empty_hint">No records</string>
    <string name="list_winner_empty_hint">You haven’t win any prize</string>
    <string name="computing">Calculating...</string>
    <string name="commiting">Submitting...</string>
    <string name="loading">Loading...</string>
    <string name="load_more">Load more</string>
    <string name="data_empty">No data</string>
    <string name="load_failed">Failed to load data</string>
    <string name="network_exception">Network failure</string>
    <string name="commiting_failed">Fail to upload</string>
    <string name="commiting_success">Submit successfully</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="view">View</string>
    <string name="modify_nickname">Edit Login name</string>
    <string name="nickname_empty_hint">Please enter your Login</string>
    <string name="portrait">Picture</string>
    <string name="nickname">Login name</string>
    <string name="address_manager">Manage your address</string>
    <string name="portrait_commit_success">Photo has been saved</string>
    <string name="portrait_commit_fail">Failed to upload</string>
    <string name="product_state">Product status: </string>
    <string name="product_track">Track your product: </string>
    <string name="award_congratulation">Congratulations, you win</string>
    <string name="award_address_select">Please select delivery address</string>
    <string name="award_address_selected">Delivery address is selected</string>
    <string name="award_share_select">Share it on Winner’s Moment</string>
    <string name="award_share_selected">Shared</string>
    <string name="order_logistics_shippe">Ready to deliver</string>
    <string name="order_logistics_shipped">Dispatched</string>
    <string name="order_logistics_received">Received</string>
    <string name="order_logistics_close">Delivery Complete</string>
    <string name="award_share_look">View details</string>
    <string name="address_empty">Edit your delivery address</string>
    <string name="create_address">Add address</string>
    <string name="lable_coin">%d Coins</string>
    <string name="coin">Coins</string>
    <string name="order_creating">Submitting this order...</string>
    <string name="order_paying">Processing your payment...</string>
    <string name="query_order_result">Please wait to confirm your order...</string>
    <string name="billing_env_fail">Payment failure, please check your network</string>
    <string name="order_pay_done">Your order has been\n submitted successfully</string>
    <string name="recharge_result">Top up</string>
    <string name="buy_fail_money_not_enough">Insufficient balance</string>
    <string name="buy_fail_times_not_enough">Not enough participants to proceed</string>
    <string name="order_pay_fail">Failed to submit this order</string>
    <string name="product_timeout">This round has been closed</string>
    <string name="buy_fail_period_out">This round has been closed, go to the lastest round?</string>
    <string name="recharge_success">Order has been submitted</string>
    <string name="take_photo">Take a photo</string>
    <string name="ortake_gallery">Gallery</string>
    <string name="no_available_app">No support!</string>
    <string name="user_center">Your account</string>
    <string name="recharge">Top up</string>
    <string name="myorder">My orders</string>
    <string name="all_in">Orders</string>
    <string name="on_going">Open</string>
    <string name="already_announced">Closed</string>
    <string name="winning_record">Prizes</string>
    <string name="share_record">Shared</string>
    <string name="login_select_app">NEW CUSTOMERS CAN GET 5 COINS</string>
    <string name="my_join_period">Round: </string>
    <string name="my_join_times">Purchase: </string>
    <string name="my_join_winner">Winner: </string>
    <string name="my_join_winner_times">Times</string>
    <string name="period">Round: </string>
    <string name="about_version">Version: </string>
    <string name="about_copyright">Copy Right: </string>
    <string name="about_phone">Contact phone number: </string>
    <string name="about_email">Contact email: </string>
    <string name="login">Login</string>
    <string name="logining">Loading...</string>
    <string name="net_not_connected">Connection Time out</string>
    <string name="cancel_authorize">Cancel this authorization</string>
    <string name="error_authorize">Failed to Authorize</string>
    <string name="failed_authorize">Authorizaiotn failure: </string>
    <string name="failed_connected_server">Cannot connect to network, please try again later.</string>
    <string name="failed_get_authrize">Failed to authorize, please try again.</string>
    <string name="show_inform">Report</string>
    <string name="show_focus">Follow</string>
    <string name="show_reword_prd">Prize: </string>
    <string name="show_people_num">Total: </string>
    <string name="show_lucky_num">Lucky number: </string>
    <string name="show_publish_time">Publish time: </string>
    <string name="show_check_detail">View details: </string>
    <string name="show_detail_comment_hint">Say something: </string>
    <string name="show_detail_comment_publish">Publish</string>
    <string name="show_save_pic_result_success">Saved</string>
    <string name="show_save_pic_result_fail">Fail to save</string>
    <string name="share_edit_hint">Share your feelings here</string>
    <string name="share_title">Share it on moments</string>
    <string name="share_btn_text">I want to share</string>
    <string name="share_dialog_album">Album</string>
    <string name="share_dialog_camera">Take a photo</string>
    <string name="share_dialog_cancel">Cancel</string>
    <string name="share_introduce_num">Round %s (Delivered)</string>
    <string name="share_toast_put_pics">Please add your photos</string>
    <string name="share_no_sdcard">Please confirm your SD card</string>
    <string name="share_success">Share successfully!</string>
    <string name="share_fail">Fail to share</string>
    <string name="share_tips_already">Shared</string>
    <string name="share_tips_notyet">Not share yet</string>
    <string name="recharge_channel_sms">SMS</string>
    <string name="recharge_channel_card">Cash card</string>
    <string name="recharge_channel_bank">Online Banking</string>
    <string name="recharge_channel_line">Line Pay</string>
    <string name="activity_language">Language</string>
    <string name="recharge_to_phone_success">Transaction Successful</string>
    <string name="recharge_to_phone_result">Transaction to %s is successful, the balance might take up to 24 hours to arrive your account</string>
    <string name="ready_to_recharge">Ready to top up</string>
    <string name="tab_home">HOME</string>
    <string name="tab_classification">CATEGORY</string>
    <string name="tab_show">SHOW</string>
    <string name="tab_me">ME</string>
    <string name="buy_now">BUY NOW</string>
    <string name="see_it_now">GET IT NOW!</string>
    <string name="dream_item">Let’s see your dream item</string>
    <string name="you_are">You are the</string>
    <string name="congratulation">Congratulations!</string>
    <string name="promotion_code">PROMOTION CODE</string>
    <string name="invite_friends_win_coins">Invite friends to win coins</string>
    <string name="enter_your_promotion_code">Enter your promotion code</string>
    <string name="general">GENERAL</string>
    <string name="you_may_also_like">You may also like</string>
</resources>