<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RadioButton
        android:id="@+id/tab_home"
        style="@style/main_tab_text"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1.0"
        android:button="@null"
        android:drawableTop="@drawable/ic_tab_home"
        android:paddingTop="10dp"
        android:singleLine="true"
        android:textSize="11sp"
        android:text="@string/tab_home"
        android:background="@null"/>
    <RadioButton
        android:id="@+id/tab_classification"
        style="@style/main_tab_text"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1.0"
        android:button="@null"
        android:drawableTop="@drawable/ic_tab_classification"
        android:paddingTop="10dp"
        android:singleLine="true"
        android:text="@string/tab_classification"
        android:textSize="11sp"
        android:background="@null"/>
    <RadioButton
        android:id="@+id/tab_show"
        style="@style/main_tab_text"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1.0"
        android:button="@null"
        android:drawableTop="@drawable/ic_tab_show"
        android:paddingTop="10dp"
        android:singleLine="true"
        android:textSize="11sp"
        android:text="@string/tab_show"
        android:background="@null"/>

    <RadioButton
        android:id="@+id/tab_me"
        style="@style/main_tab_text"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1.0"
        android:button="@null"
        android:drawableTop="@drawable/ic_tab_me"
        android:paddingTop="10dp"
        android:singleLine="true"
        android:textSize="11sp"
        android:text="@string/tab_me"
        android:background="@null"/>

</merge>
