<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="40dp"
    android:background="@color/white"
    android:gravity="center"
    android:orientation="vertical"
    >
    <LinearLayout
        android:id="@+id/layout_loading"
        android:layout_width="match_parent"
        android:layout_height="@dimen/footerview_height"
        android:gravity="center"
        android:visibility="gone"
        >
        <ProgressBar
            style="?android:attr/progressBarStyleSmall"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            android:gravity="center"
            android:textColor="@color/colorText"
            android:textSize="14sp"
            android:text="@string/loading"/>
    </LinearLayout>
    <TextView
        android:id="@+id/textview_load"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/load_more"
        android:textColor="@color/colorText"
        android:textSize="14sp"
        android:visibility="gone"
        />
    <TextView
        android:id="@+id/textview_retry"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/click_retry"
        android:textColor="@color/colorText"
        android:textSize="14sp"
        android:visibility="gone"
        />
    <LinearLayout
        android:id="@+id/layout_end"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:orientation="horizontal"
        android:visibility="gone">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/colorText"
            android:textSize="14sp"
            android:text="@string/loadmore_empty"/>
    </LinearLayout>
    <View
        android:id="@+id/layout_empty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
</LinearLayout>
