<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical">
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/divider"
        />
    <LinearLayout
        android:id="@+id/layout_billing"
        style="@style/recharge_channel_cell_layout">
        <TextView
            style="@style/recharge_channel_cell_text"
            android:text="@string/google_pay"/>
        <ImageView
            android:id="@+id/checkbox_billing"
            style="@style/recharge_channel_checkbox"
            android:src="@drawable/ic_checkbox_check"
            />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/divider"
        android:visibility="visible"
        />
    <LinearLayout
        android:id="@+id/layout_sms"
        style="@style/recharge_channel_cell_layout"
        android:visibility="visible"
        >
        <TextView
            style="@style/recharge_channel_cell_text"
            android:text="@string/recharge_channel_sms"/>
        <ImageView
            android:id="@+id/checkbox_sms"
            style="@style/recharge_channel_checkbox"
            />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/divider"
        android:visibility="visible"
        />
    <LinearLayout
        android:id="@+id/layout_cashcard"
        style="@style/recharge_channel_cell_layout"
        android:visibility="visible">
        <TextView
            style="@style/recharge_channel_cell_text"
            android:text="@string/recharge_channel_card"/>
        <ImageView
            android:id="@+id/checkbox_card"
            style="@style/recharge_channel_checkbox"
            />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/divider"
        android:visibility="visible"
        />
    <LinearLayout
        android:id="@+id/layout_bank"
        style="@style/recharge_channel_cell_layout"
        android:visibility="visible">
        <TextView
            style="@style/recharge_channel_cell_text"
            android:text="@string/recharge_channel_bank"/>
        <ImageView
            android:id="@+id/checkbox_bank"
            style="@style/recharge_channel_checkbox"
            />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/divider"
        android:visibility="visible"
        />
    <LinearLayout
        android:id="@+id/layout_linepay"
        style="@style/recharge_channel_cell_layout"
        android:visibility="gone">
        <TextView
            style="@style/recharge_channel_cell_text"
            android:text="@string/recharge_channel_line"/>
        <ImageView
            android:id="@+id/checkbox_line"
            style="@style/recharge_channel_checkbox"
            />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/divider"
        android:visibility="gone"
        />

</LinearLayout>