<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout_awarding_win"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:visibility="invisible"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textview_congratulations"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:textSize="30sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:text="@string/congratulation"
        android:visibility="invisible"
        />
    <LinearLayout
        android:id="@+id/layout_winner_hint"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_below="@+id/textview_congratulations"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:gravity="bottom|center_horizontal"
        android:visibility="invisible"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:text="@string/you_are"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:textSize="35sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:text="@string/label_winner"
            />
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:textColor="@color/white"
        android:text="@string/dream_item"
        android:visibility="invisible"
        />

    <dotc.android.happybuy.modules.awarding.widget.LightFocusLayout
        android:id="@+id/layout_win_light_focus"
        android:layout_width="match_parent"
        android:layout_height="66dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/ic_highlight"
        android:visibility="invisible"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:text="@string/see_it_now"
            />
    </dotc.android.happybuy.modules.awarding.widget.LightFocusLayout>
    <ImageView
        android:id="@+id/imageview_win_sunshine"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="8dp"
        android:layout_marginBottom="34dp"
        android:src="@drawable/ic_anim_sunshine"
        android:visibility="invisible"
        />
    <TextView
        android:id="@+id/textview_win_product_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/layout_win_light_focus"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:text=""
        android:visibility="invisible"
        />

</RelativeLayout>