<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_reminder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="36dp"
        android:text="@string/list_winner_empty_hint"
        android:textColor="@color/colorText"
        android:textSize="14sp"
        />
    <TextView
        android:id="@+id/tv_buy_now"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="8dp"
        android:text="@string/buy_now"
        android:textColor="@color/red_light"
        android:textSize="14sp"
        />

    <TextView
        android:layout_width="match_parent"
        android:textSize="14sp"
        android:layout_gravity="center_vertical"
        android:paddingTop="10dp"
        android:paddingLeft="11dp"
        android:layout_marginTop="20dp"
        android:paddingBottom="10dp"
        android:text="@string/you_may_also_like"
        android:layout_height="40dp" />

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none"
        >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >
            <GridView
                android:id="@+id/gridView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:scrollbars="none"
                android:numColumns="auto_fit"
                android:stretchMode="spacingWidthUniform" >
            </GridView>
        </LinearLayout>
    </HorizontalScrollView>

</LinearLayout>
