<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:visibility="visible"
    android:orientation="vertical"
    >

    <LinearLayout
        android:id="@+id/layout_use_phone_distribute"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/white_list_selector"
        android:gravity="center_vertical"
        android:orientation="horizontal">
        <TextView
            style="@style/award_cell_subject"
            android:layout_width="match_parent"
            android:text="@string/ready_to_recharge"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_use_phone_distributed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/textview_use_phone_result"
                style="@style/award_cell_subject"
                android:layout_width="match_parent"
                android:text="@string/recharge_to_phone_success"
                />
            <TextView
                android:id="@+id/textview_use_phone_result_date"
                style="@style/award_cell_time"
                android:text=""
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/grey_corner_fill_selector"
            android:gravity="center"
            android:orientation="vertical">
            <TextView
                android:id="@+id/textview_use_phone_result_desc"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:gravity="left|center_vertical"
                android:textColor="@color/colorText"
                android:textSize="14sp"
                android:text="@string/recharge_to_phone_result"
                />
        </LinearLayout>
    </LinearLayout>
</FrameLayout>
